test/errors/nested_func.kbn
凡甲自一至一
夫倍者術也
答一
術畢
焉
